package _191220059.assignment3;

import _191220059.assignment3.Matrix.Position;
public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
